--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-h5py~=3.6.0
-numpy~=1.22.3
-open3d~=0.15.2
-# for cuda 11.3 support install manually:
-# pip3 install torch==1.11.0+cu113 torchvision==0.12.0+cu113 torchaudio==0.11.0+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html
-torch~=1.11.0+cu113
+h5py~=3.11.0
+numpy~=1.26.3
+open3d==0.18.0
+# for cuda 12.1 support install manually:
+# pip install torch==2.1.2 torchvision==0.16.2 torchaudio==2.1.2 --index-url https://download.pytorch.org/whl/cu121
+torch==2.1.2+cu121
 torch-cluster~=1.6.0
-tensorboard~=2.8.0
-parse~=1.19.0
-argparse~=1.4.0
-scipy~=1.8.0
+tensorboard~=2.17.0
+parse~=1.20.2
+scipy~=1.14.0
 easydict~=1.10
